// Vitest Snapshot v1

exports[`<Message /> > should be a error message 1`] = `
<div>
  <div
    class="bgm-message bgm-message--error"
  >
    <div
      class="bgm-message__content"
    >
      <div />
      <span>
        example-message-error
      </span>
    </div>
  </div>
</div>
`;

exports[`<Message /> > should be a whole line 1`] = `
<div>
  <div
    class="bgm-message bgm-message--info bgm-message--block"
  >
    <div
      class="bgm-message__content"
    >
      <div />
      <span>
        example-message-block
      </span>
    </div>
  </div>
</div>
`;

exports[`<Message /> > should be render a Message 1`] = `
<div>
  <div
    class="bgm-message bgm-message--info"
  >
    <div
      class="bgm-message__content"
    >
      <div />
      <span>
        example-message
      </span>
    </div>
  </div>
</div>
`;
